# bcfp

./: .gitignore  README.md  pyproject.toml  setup.py  test_ecfp_bcfp_ss_oov.py
bcfp/: __init__.py  fingerprints.py  model_persistence.py  utils.py
examples/: complete_train_inference_workflow.py  example_ml_workflow.py  example_sortslice_oov.py
src/: bcfp.cpp  bcfp.h  bcfp_pybind.cpp
tests/: test_basic.py  test_bcfp_new_hashes.py  test_comprehensive.py  test_ecfp_bcfp_ss_oov.py  test_hash_compatibility.py  test_ml_workflow.py  test_save_load_vocab.py  test_simple.py
