[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10", "numpy>=1.23"]
build-backend = "setuptools.build_meta"

[project]
name = "bcfp"
version = "2.0.0"
description = "High-performance molecular fingerprints (ECFP/BCFP) with 7 hash function implementations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
keywords = ["molecular-fingerprints", "ecfp", "bcfp", "cheminformatics", "hash-functions"]
authors = [
  {name = "BCFP Contributors"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "rdkit>=2025.3",
  "numpy>=1.23",
  "xxhash>=3.0.0",
  "blake3>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]
ml = ["xgboost>=1.5.0", "scikit-learn>=0.24.0", "pandas>=1.2.0"]

[project.urls]
Homepage = "https://github.com/osmoai/bcfp"
Documentation = "https://github.com/osmoai/bcfp#readme"
Repository = "https://github.com/osmoai/bcfp.git"
Issues = "https://github.com/osmoai/bcfp/issues"

[tool.setuptools]
packages = ["bcfp"]

[tool.setuptools.package-data]
bcfp = ["*.so", "*.pyd", "*.dylib", "*.dll"]

[tool.setuptools.package-dir]
"" = "."

